chore: rebrand ODDESSY and ZentraOS to Nexus
